First time putting a Jupyter notebook on github. It's weird. Maybe it's a little better now?

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +27,7 @@
        "(890, 1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,9 +395,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final error: 0.226849549371\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEKCAYAAADjDHn2AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl8FdX9//HXhwTCvgdFFgEFAQUEIu64gogWW7UVtd9q\nq6JWan+1rYVq1WJtrbbW+q0bX0vrTlvXVFELqNQFlLCIrBJZJGFfA0JCls/vj5mEm5Dk3sC9uYG8\nn4/HfTBzZs7cz2Q0n8ycM+eYuyMiIlKdBskOQERE6j4lCxERiUrJQkREolKyEBGRqJQsREQkKiUL\nERGJSslCRESiUrIQEZGolCxERCSq1GQHEC/t27f3bt26JTsMEZFDypw5cza7e3q0/Q6bZNGtWzey\nsrKSHYaIyCHFzFbHsp8eQ4mISFRKFiIiEpWShYiIRKVkISIiUSlZiIhIVEoWIiISlZKFiIhEddi8\nZ3GwlqzLY+riDXRt25RLTjwKM0t2SCIidYaSReiJGV/y+vy1ALRr3ogze0Z9oVFEpN7QY6hQcYmT\n2iC4m1i3PT/J0YiI1C1KFhEaN0wBoLCkJMmRiIjULUoWEUpbKdyTGoaISJ2T0GRhZiPMbJmZZZvZ\nuCr2+Y6ZLTazRWb2QkT5NWa2PPxck8g49wUT/KNcISJSXsIauM0sBXgUGAbkALPNLNPdF0fs0xMY\nD5zu7tvMrENY3ha4G8gg+N09J6y7LVHxwr47C91aiIiUl8g7iyFAtruvcPe9wGTgkgr73AA8WpoE\n3H1jWH4BMNXdt4bbpgIjEhgrQFl3WaUKEZHyEpksOgFrItZzwrJIvYBeZvaRmc0ysxE1qBt3pa9W\n6MZCRKS8ZL9nkQr0BM4GOgP/NbN+sVY2szHAGICuXbsedDD7GriVLUREIiXyziIX6BKx3jksi5QD\nZLp7obuvBL4gSB6x1MXdJ7p7hrtnpKcf2Et0+YXFdBv3Jm8sWKfHUCIiVUhkspgN9DSz7mbWCBgN\nZFbY5zWCuwrMrD3BY6kVwDvAcDNrY2ZtgOFhWdxt311YtqyusyIilUvYYyh3LzKzsQS/5FOASe6+\nyMwmAFnunsm+pLAYKAZ+7u5bAMzsXoKEAzDB3bcmKtZSGg5KRKRyCW2zcPcpwJQKZXdFLDtwW/ip\nWHcSMCmR8YmISGz0BreIiESlZCEiIlEpWYiISFRKFiIiEpWShYiIRKVkISIiUSlZiIhIVEoW5eit\nPBGRyihZiIhIVEoWIiISlZKFiIhEpWQhIiJRKVmIiEhUShYiIhKVkoWIiESlZCEiIlElNFmY2Qgz\nW2Zm2WY2rpLt15rZJjObH36uj9hWHFFecTpWERGpRQmbKc/MUoBHgWFADjDbzDLdfXGFXf/h7mMr\nOcQedz8xUfGJiEjsEnlnMQTIdvcV7r4XmAxcksDvExGRBElksugErIlYzwnLKrrMzBaY2Utm1iWi\nvLGZZZnZLDP7ZmVfYGZjwn2yNm3aFMfQRUQkUrIbuP8NdHP3/sBU4OmIbUe7ewZwFfCwmR1TsbK7\nT3T3DHfPSE9Pr52IRUTqoUQmi1wg8k6hc1hWxt23uHtBuPoUMDhiW2747wrgfWBgAmMVEZFqJDJZ\nzAZ6mll3M2sEjAbK9Woys44Rq6OAJWF5GzNLC5fbA6cDFRvGE8Zr64tERA4RCesN5e5FZjYWeAdI\nASa5+yIzmwBkuXsmcKuZjQKKgK3AtWH1PsCTZlZCkNDur6QXVXzijEgNpuksREQqlbBkAeDuU4Ap\nFcruilgeD4yvpN7HQL9ExiYiIrFLdgN30plmxxMRiareJ4tIShsiIpVTshARkaiULEREJColCxER\niareJwvXWxUiIlHV+2QhIiLR1ftkoa6zIiLR1ftkISIi0SlZiIhIVEoWIiISlZKFiIhEpWQhIiJR\nKVmIiEhUShYiIhJVQpOFmY0ws2Vmlm1m4yrZfq2ZbTKz+eHn+oht15jZ8vBzTSLjFBGR6iVs8iMz\nSwEeBYYBOcBsM8usZMa7f7j72Ap12wJ3AxkEs5zOCetuS1S8IiJStUTeWQwBst19hbvvBSYDl8RY\n9wJgqrtvDRPEVGBEguIUEZEoEpksOgFrItZzwrKKLjOzBWb2kpl1qUldMxtjZllmlrVp06Z4xY27\nBhcUEYmU7AbufwPd3L0/wd3D0zWp7O4T3T3D3TPS09PjFtRv3lwSt2OJiBwOEpkscoEuEeudw7Iy\n7r7F3QvC1aeAwbHWTQTTmIIiIpVKZLKYDfQ0s+5m1ggYDWRG7mBmHSNWRwGlf9K/Aww3szZm1gYY\nHpaJiEgSJKw3lLsXmdlYgl/yKcAkd19kZhOALHfPBG41s1FAEbAVuDasu9XM7iVIOAAT3H1romIV\nEZHqJSxZALj7FGBKhbK7IpbHA+OrqDsJmJTI+CrS3BYiIpVLdgO3iIgcApQsREQkqnqfLFo3bZjs\nEERE6rxqk4WZNTCz02ormGRIaaB2ChGRaKpNFu5eQjC+k4iI1GOxPIaabmaXmemVNRGR+iqWZHEj\n8C9gr5nlmdlOM8tLcFwiIlKHRH3Pwt1b1EYgIiJSd8X0Ul74lvXQcPV9d38jcSGJiEhdE/UxlJnd\nD/wYWBx+fmxmv0t0YCIiUnfEcmcxEjgx7BmFmT0NzKOKYToONWq1FxGJLtaX8lpHLLdKRCAiIlJ3\nxXJn8Ttgnpm9R/CH+FBgXEKjEhGROqXaZBG+W/EhcApwUlj8C3dfn+jARESk7qg2Wbi7m9kUd+9H\nhYmLRESk/oilzWKumZ0Ufbf9mdkIM1tmZtlmVuWjq/ANcTezjHC9m5ntMbP54eeJA/n+msdbG98i\nInLoiaXN4mTgajNbDXxN0G7h7t6/ukpmlkIwrtQwIAeYbWaZ7r64wn4tCLrmflLhEF+6+4mxnYaI\niCRSLMniggM89hAg291XAJjZZOASgnc1It0L/B74+QF+z0HRkFciItFFG6I8BXjH3VdX/MRw7E7A\nmoj1nLAs8viDgC7u/mYl9bub2Twzm2FmZ8bwfSIikiDRGriLwzaHru7+VTy/2MwaAA8B11ayeR3Q\n1d23mNlg4DUzO97d8yocYwwwBqBr167xDE9ERCLE8hiqDbDIzD4laLMAwN1HRamXC3SJWO8clpVq\nAZwAvB8+CjoSyDSzUe6eBRSE3zPHzL4EegFZkV/g7hOBiQAZGRkew7mIiMgBiCVZ/OoAjz0b6Glm\n3QmSxGjgqtKN7r4DaF+6bmbvAz9z9ywzSwe2hnc2PYCewIoDjENERA5SLEOUzzCzo4Ge7j7NzJoC\nKTHUKzKzscA74f6T3H2RmU0Asty9uvc2hgITzKwQKAFucvetsZyQiIjEX9RkYWY3ELQLtAWOIWik\nfgI4L1pdd58CTKlQdlcV+54dsfwy8HK044uISO2I5aW8W4DTgTwAd18OdEhkULXJqlgWEZF9YkkW\nBe6+t3TFzFIBNSaLiNQjsSSLGWb2S6CJmQ0jmI/734kNS0RE6pJYksU4YBPwOXAjQRvEnYkMSkRE\n6pZYekOVAP8XfkREpB6KdaY8ERGpx5QsREQkqpiTRfgy3mFHg86KiEQXNVmY2WlmthhYGq4PMLPH\nEh6ZiIjUGbHcWfyJYE6LLQDu/hnBcByHHc1tISJSuZgeQ7n7mgpFxQmIRURE6qhYRp1dY2anAW5m\nDQmmQF2S2LBERKQuieXO4iaC8aE6EQw1fmK4LiIi9UQsL+VtBq6uhViSQu0UIiLRxTJE+SOVFO8g\nmJPi9fiHJCIidU0sj6EaEzx6Wh5++hNMkXqdmT1cXUUzGxHO4Z1tZuOq2e8yM3Mzy4goGx/WW2Zm\nF8R0NiIikhCxNHD3B05392IAM3sc+AA4g2BwwUqZWQrwKDAMyAFmm1mmuy+usF8LgkbzTyLK+hJM\nw3o8cBQwzcx6lcYgIiK1K5Y7izZA84j1ZkDb8Bd3QTX1hgDZ7r4inA9jMnBJJfvdC/weyI8ouwSY\n7O4F7r4SyA6PJyIiSRBLsngAmG9mfzOzvwPzgAfNrBkwrZp6nYDI9zNywrIyZjYI6OLub9a0roiI\n1J5YekP91cymsO8v+1+6+9pw+ecH+sVm1gB4CLj2II4xhmB+cLp27XqghxERkShiHUgwH1gHbAOO\nNbNYhvvIBbpErHcOy0q1AE4A3jezVcApQGbYyB2tLgDuPtHdM9w9Iz09PcZTERGRmoql6+z1BA3Q\nnYH5BL/UZwLnRqk6G+hpZt0JftGPBq4q3ejuO4D2Ed/zPvAzd88ysz3AC2b2EEEDd0/g09hPS0RE\n4imWO4sfAycBq939HGAgsD1aJXcvAsYC7xAMD/JPd19kZhPMbFSUuouAfwKLgbeBW9QTSkQkeWLp\nOpvv7vlmhpmluftSMzsuloO7+xSCObsjy+6qYt+zK6zfB9wXy/eIiEhixZIscsysNfAaMNXMtgGr\nExuWiIjUJbH0hvpWuHiPmb0HtCJ4NCQiIvVEtckifAt7kbv3BnD3GbUSVZLkbt+T7BBEROqkahu4\nw0blZWZ2WL/E8NjVg5IdgohInRZLm0UbYJGZfQp8XVro7tX2aDqUjOzXMdkhiIjUabEki18lPAoR\nEanTYmngnmFmRwM93X2amTUFUhIfmoiI1BVRX8ozsxuAl4Anw6JOBN1oRUSknojlDe5bgNOBPAB3\nXw50SGRQIiJSt8SSLArC+SgAMLNUwBMXkoiI1DWxJIsZZvZLoImZDQP+Bfw7sWGJiEhdEkuyGAds\nIphC9UaCsZ7uTGRQIiJSt8TSdfabwDPu/n+JDkZEROqmWO4svgF8YWbPmtnFYZuFiIjUI1GThbt/\nHziWoK3iSuBLM3sq0YGJiEjdEdNdgrsXmtlbBL2gmhA8mro+kYGJiEjdEctLeRea2d+B5cBlwFPA\nkbEc3MxGmNkyM8s2s3GVbL/JzD43s/lm9qGZ9Q3Lu5nZnrB8vpk9UaOzEhGRuIrlzuJ7wD+AG929\nINYDh8ObPwoMA3KA2WaW6e6LI3Z7wd2fCPcfBTwEjAi3fenuJ8b6fSIikjixtFlc6e6vlSYKMzvD\nzB6N4dhDgGx3XxG+1DcZuKTCsfMiVpuhl/1EROqkWHpDYWYDzexBM1sF3AssjaFaJ2BNxHpOWFbx\n2LeY2ZfAA8CtEZu6m9k8M5thZmdWEdcYM8sys6xNmzbFcioiInIAqkwWZtbLzO42s6XA/wJfAebu\n57j7/8YrAHd/1N2PAX7Bvpf91gFd3X0gcBvwgpm1rKTuRHfPcPeM9PT0eIUkIiIVVHdnsRQ4F7jY\n3c8IE0RxDY6dC3SJWO8cllVlMkEvK9y9wN23hMtzgC+BXjX4bhERiaPqksWlBH/hv2dm/2dm5wFW\ng2PPBnqaWXczawSMBjIjdzCznhGrFxH0uMLM0sMGcsysB9ATWFGD7xYRkTiqsjeUu78GvGZmzQga\npv8f0MHMHgdedff/VHdgdy8ys7HAOwSTJU1y90VmNgHIcvdMYKyZnQ8UAtuAa8LqQ4EJZlYIlAA3\nufvWgzrTKF6/5XTW7djDTc/NTeTXiIgcksw99g5IZtYG+DZwhbufl7CoDkBGRoZnZWUd1DF2FRRx\nwt3vALDq/oviEZaISJ1mZnPcPSPafjH1hirl7tvCRuU6lShERCSxapQsDnc1aZAREalPlCxERCQq\nJQsREYlKyUJERKJSshARkaiULEREJColCxERiUrJQkREolKyEBGRqJQsREQkKiULERGJSslCRESi\nUrIQEZGolCxERCSqhCYLMxthZsvMLNvMxlWy/SYz+9zM5pvZh2bWN2Lb+LDeMjO7IJFxiohI9RKW\nLMJpUR8FLgT6AldGJoPQC+7ez91PBB4AHgrr9iWYhvV4YATwWOk0qyIiUvsSeWcxBMh29xXuvheY\nTDA9axl3z4tYbQaUTtt3CTDZ3QvcfSWQHR5PRESSoMo5uOOgE7AmYj0HOLniTmZ2C3Ab0Ag4N6Lu\nrAp1OyUmTBERiSbpDdzu/qi7HwP8ArizJnXNbIyZZZlZ1qZNmxIToIiIJDRZ5AJdItY7h2VVmQx8\nsyZ1w/nAM9w9Iz09/SDD3V9efiEfZ2+O+3FFRA41iUwWs4GeZtbdzBoRNFhnRu5gZj0jVi8ClofL\nmcBoM0szs+5AT+DTBMZaqVuen8tVT31C5mdreXbWanbvLeKCP/2X+Wu213YoIiJJlbA2C3cvMrOx\nwDtACjDJ3ReZ2QQgy90zgbFmdj5QCGwDrgnrLjKzfwKLgSLgFncvTlSsVflgeXBXceuL8wA4okUa\nyzbs5P63ljB5zKm1HY6ISNIksoEbd58CTKlQdlfE8o+rqXsfcF/ioqu5Mc/OAWDWiq0s37CTnke0\nSHJEIiK1I+kN3Ieq52atTnYIIiK1RsniAD09czXPzFyV7DBERGqFkkUEs5rtf9fri3h42heJCUZE\npA5RsjhID09bTvbGXWzeVZDsUEREEiahDdz1xfkPzQDg01+eR4eWjZMcjYhI/OnOIo7WbNud7BBE\nRBJCySKO7s4M2jDcPfrOIiKHED2GiqOFuXkszM3jnOM6MKBL62SHIyISN7qzSIAS3VmIyGFGyUJE\nRKJSskiANxes4z+L1pOXX5jsUERE4kJtFgnw1IcreerDlQCsuv+iJEcjInLwdGchIiJR6c6iCvHq\n/tr/nnf41sBOtGzSkGPSm/PNgZodVkQOPUoWVSgoKonLcfLyi3h65r4Ragcf3YYzH3iPV394GgO7\ntonLd4iIJFpCH0OZ2QgzW2Zm2WY2rpLtt5nZYjNbYGbTzezoiG3FZjY//GRWrJtoBYXxSRYVjXzk\nAwCe1RDnInIISViyMLMU4FHgQqAvcKWZ9a2w2zwgw937Ay8BD0Rs2+PuJ4afUYmKsyp7ChMzMd/O\n/CIAXplb3XTkIiJ1SyLvLIYA2e6+wt33ApOBSyJ3cPf33L10QKVZQOcExlMjiUoWFe3YXUhxiVNY\nXMKr83J4/pPV/Gnq/kOGlO53INydvXF6rCYi9VMi2yw6AWsi1nOAk6vZ/zrgrYj1xmaWRTAH9/3u\n/lr8Q6xafi0ki27j3ixbTkttUK6dZGd+Eb07tmBkv468uWAtv3j5cwB+dXFf/v3ZWkaccCR7i0p4\n9L1szjmuA+vy8vmfU47mjGPbc2Sr8iPfPvXBSu6bsoQ5d55Pu+ZpAGzMy8eBvUUlNG6YQnqLtISf\nr4gcuupEA7eZfRfIAM6KKD7a3XPNrAfwrpl97u5fVqg3BhgD0LVr17jGVFt3FqUqNqhP+ih4T+P2\nlxaUK7/3jcUAzF+zvazs7UXrAfgsomzpvSNoYMbLc3O4b8oSAAb/Zhq//VY/rjq5K0N+O73KWF75\n4WnM/HILt5xzLBAkzsYNUwD4ZMUWMrq1JaWBUVBUzOotu+lVyVzkD039grOPS2eQGvFFDguJTBa5\nQJeI9c5hWTlmdj5wB3CWu5fNIOTuueG/K8zsfWAgUC5ZuPtEYCJARkZGXAdkyt9bu8ki3nr/6u1K\ny3/56ue8u3RjtXUvfexjAMYM7cGCnB1c9vjH/O3ak2jSKIXRE2dx63k9adO0IU/OWMH6vHzO7d2B\nd5du5OWbT2Pw0W3YuDOfR6Yv55Hpy8m683zmrt5Gn44t6dK2KQBbv97LoHun8sL1JzOgS2vWbt9D\nz0oSDsDGnfkMuW86L95wCqce0+4gfiIicjAsUcNpm1kq8AVwHkGSmA1c5e6LIvYZSNCwPcLdl0eU\ntwF2u3uBmbUHZgKXuPviqr4vIyPDs7KyDirm3XuL6HvXOwBMujaDH/z94I5X3xyT3oxdBUVsyKt8\n1sDeR7Zg6fqdlW67bVgvHpr6BeMv7M2NZx0DwJqtuznzgffK9mnfvBEv3HAKPdo3Y+riDaQ0MMY8\nOweAv33/JPp3akW75mlszMtn3prtPDtzNfd96wSObtcMCNpu3l26kbOP60BKgxrOoVsD+YXFXP90\nFveM6suxHSpPgiJ1hZnNcfeMqPslcu4FMxsJPAykAJPc/T4zmwBkuXummU0D+gHrwipfufsoMzsN\neBIoIWiEf9jd/1rdd8UjWXxdUMTxdwfJ4tGrBnHLC3MB+PfYM/jRi3NZtUWTG9WGFo1Ty3qN1dRN\nZx3DEzP23YAe1aoxH48/jyXr8rjlhbms2PQ1px/bjmtP606fji0Y8fAH/PbSfnRt25Tmaakck94M\ni5iMvag4eDyYmhL0BVm1+Ws+XbmVgV1bc1TrJjRKbUBqmHg+zN7Mpp0FNG6Ywg+fn8uQbm3543cG\n8IO/z+b5G06mQwvNoih1T51IFrUpHskiL7+Q/vf8B4A/fHsAP/vXZ8C+8Z0mf/oV4175/OAClTrv\n1B7tOKVHO1o0TmXCG1XezNbIxf074gSDTD7x3UGMOKFj2bb8wmLW7cine/vgDmjt9j1s3lVA/877\n5kTZsaeQgqJinvl4Na9/lssHt5/Lys1f8+7SjVx3RncguHMqKnFSGxiZn61leN8jadIohTVbd7N7\nbzHHHbnvLmdjXj6f5exgWN8j2JiXz7/m5LAwdwcDurTmpvDOTuqHWJNFnWjgris8oo25tDfUmKE9\nyspGD+nK6CFdyS8spvev3qZ98zQ276r8kUsszu/TgWlLqm8/kNo3c8UWZq7YEtdjvrFgXdnyTc8F\nd6ytmzZk++7oIxP/6YoB/OQfn5UrKywu4dLHPmLb7kImfbiSx64exLtLN/Ln6cs5r3cHpoftUnde\n1IffvLmkrF7WnefTrlmjsg4OfTu2ZPG6vLLtby1cX5YsnpjxJQWFJXRp24QTOrWioLCEPh2DhPP0\nzNV895SupKWmlItrz95iZq3YwqadBXznpC5U5/X5ueRs21PWkULqNt1ZRChteIV9/5MtuGc4LRs3\n3G/f52at5qxe6XRq3YQzfv8ua3fkV3rM6p7TL/r1BZxwzzs88d3BpKU24Nq/zaZT6yYM7dWeFz9d\nU2kdkUTr2aE5yzfuqnTbpQM78cq8oJ/Ktad14+8fr6Jvx5a8estpLMzN47LHPy7bd8VvR7J5VwHf\n/esnfLEhON73T+/GZYM683VBEVdMnAVAn44t+eXI3tz47Bz+59SjOTa9Oef27kC78I+xl+bkcP9b\nS1k84QKaNir/9+2zs1bToUUaFxx/JBA8Jly4dgfn9u7AvW8sYdyFvWnVpCHTl2ygd8eWHNEijWL3\n/ZJcVYpLgneUmjSKbX+ALbsK+GLDrnIdMjbvKuAv72Zzx0V9aJhy4K+3uXu5x6TxoMdQB6D0jgHg\np8N68cepX7D8vgujXtzSHjuVWfabETw7c3W5v+5KRQ5f/nVBEZc/MZMHL+/PCZ1asSEvn917i0lL\nbcDwP/2XXQVFXH1yV8aP7MPH2ZspcS/7C7Vr26Z8tXX/9pRnfjCEtxet54VPvor5ZyBSV7x886lc\n9vjMcmW3nteTR6YHfWEmXHI8d71e1l+GhilGYXHw+2zM0B5M/O8KAP747QH8NHyk3LJxKnn5Rcy+\n43xmrtjCrS/O45ErBzLi+CPZkJdP5zZNWLQ2j74dW7KnsJhfvbaQV+blsvJ3IzEzFubu4OL//ZDh\nfY/g7OM6cPng4D3iSx//iIW5eTx73RC+N+lT3GHymFM4pUc7SkqcHz4/l7cXrefxqwdxTu8O7C0u\nKfsjdOaXW2jfvFGVPQLdna+27mbp+p3c+Owcpt02NK4dJ5QsDtClj31Es7RU+nduxRMzVvDlb0fG\nXHf77r38Y/YabjizB5M+WsnoIV1pnhb8JfTnacvp1r4pP548H4CR/Y7ksasHx3zs9Tvyad+8UVlD\n647dhQyY8B/uGNmHG4b2KPeC3y9G9KZL2yZc3P8oAG5+bg5vLVxftv0Hp3cve4+j1Ms3n8pNz81l\n0859j9XuGNmn7B2N1AZGUQxvkF8+uDMvzcmJ+bxEDgX9O7diQc6OSrdd1L8jb0Y8Zow09SdDGfHn\nDyodfeGOkX3I/Gwtn+eWP+6LN5zCjj17GdClNaf+7t396v10WC9uGNqDkY98QLd2zbh8cGdG9uu4\n336xUrI4QKXJomeHFvwzaw0Lf31BHKLbJ7+wmNtfWsD4kb3p2KrJQR2ruMRpYGBmbN5VQMOUBizK\n3cGpx7Qrd6u6Z28xfe56m9dvOZ2GKQ3oe1RLikucqYvX82H2Zo5u24wbhvbg9fm5Zcnso3Hn0ql1\nE4pLnJfn5HDpoE4UlTjbdxdyZKvGbMjL55bn55K1ehs/G96LMUOD59wpDYynP17F4nV5NGuUwnVn\n9KBpWgp5ewopKnGG/+m/Uc/rGwOO4u5v9OV//vopSyKep19/RveySaVEZJ+/XDWw7I/DmlKyOECl\nyaJL26b8Z9EGsu48Pw7RHTpen5/LXz9cSebYM6Lue/tLn/HPrBym3XYWx3ZoXqPvWb5hJ41SG7Az\nv4gTOrUC9g1/UnF2wWdmrqJL26YM7NKaEydM5eErTqRzmyZ8b9Kn7K7w8uRF/Try5ufreOp7GVz/\nTBZDurXlnzedCgQ9kW55YS7HH9WSR64cyDHpzcsePY4951h2FRQxfekG1mzdA8CCe4Yz/KH/cumg\nTjz2/r7uuOkt0srdgYnUBQc6K6eSxQG69LGPaNoolQ4t0vh01VY+/MW5cYju8LRnbzHzvtrGace2\nj8vxlq7PY8/e4pjn+XB3+t3zH8aP7M0Zx7ZnxeavOee4DkAwLMkVE2dxVq90nv7BkJhj2JlfyM3P\nzeX+y/rRuU3TsvLX5+fiDv06t6JT6yZMW7KBhbl5/GRYT9JSU8qeZd9wZncW5uYxc8UWRg04ige/\n3Z/j7gzawR64vD/fHtyZtxauZ/HaPIb2Suc7T86kT8eW5e6gAJqnpbKr4MDeNZH6SckiRvFKFqV/\n3V54wpFkb9zF1NvOilJD6qKSEuePU5dx7Wnda22QxB27C2nZJHW/3ip5+YU8/v6X3Das136dJd5b\ntpHTj2lP1qqtLMjdUe4dh/zCYh6a+gUndWvLkzO+5Lw+R9CzQ3OenbWaGV9s4uWbT+OR6cu57ozu\ntG+eVjZXyuf3DKdF44Zl/y1HdtH+27Un8fePV9GySUOyN+5iybq8Snvsndildbnxxw7EgM6t+KyK\n5/wSf0o1JpaAAAAK4ElEQVQWMYp3sjjnuHQ279rLv38U/XGMSF1Q+m5Q6aCP23fvJaWB0aKSrt+R\ntuwqYPBvpgGwZMKIsm6ipf8vzBx/Lpt2FnD8Ua0Y9ZcPWbQ2jwcv78/PX1rA6JO68J2TutCxVeNK\n2+AiO160a9aIPh1b8mH2ZgBuPKsHT85YUbb91vN60ijFSG+RxhUndeXtheu56bk5Zdt/Pep47s4M\nej+98sPTcHduf2kBa7fn1/rAn3WRkkWM4p0sTu7eFnfKnneLHM6Kiksws3JjZq3c/DV7i0rKvfkd\n6e2F6zmrV3qN3kFwd3YVFNGicUOKikt4dtZqvtq6m+9kdKFPx5b77f/qvBzWbN3DkO5tOaVHO3bs\nLqTEnTbNGpXbb87qbXRp24Qh902nUUoDFk24gIYpDdi8q4AFOds549h0et0ZzICw6v6L+Dh7M8d3\nakWrJg3J2bab/MKSStvdVm7+mnP+8D43Du3BT4cfx/w120lLbcCxHZrz9sL1OPCNAR3ZmFdQNo7Z\ntNuG0jClAT96cR4/OrcnjVIbcM2kT8sdd+m9I3h1Xi7jX/mcs3qlM7RXetmI0rEYcfyRvL1oPU0a\nprCnsJiXbz6VwUe3jbl+JCWLAxT5l9DQXuk8U4Pn3SKSPCUlzrce/5ix5xzLsL5H7Lf9qQ9WcEx6\nc87p3SEh3//Vlt00S0spmzMm0o49hYx5JovfXdqPNk0b7ZfsYN/vnkW/voDPc3dwdLumnPq7d7lx\naA8Wr8vjie8OLpsuoFlaKrv3FtE4NYX8ouL9XlasCSWLAxSZLIb3PYKJ34v6MxQROWgLcoI2osgx\nwQqKimmU0iDub21H0thQcVCT22sRkYMRmSRKxTosSW1I5Bzch6S2EbeHr89fm8RIRETqDiWLCub+\naliyQxARqXOULCpx67nBkMkf3H5OkiMREakbEposzGyEmS0zs2wzG1fJ9tvMbLGZLTCz6WZ2dMS2\na8xsefi5JpFxVnTb8ONYdf9FZXNGi4jUdwlLFmaWAjwKXAj0Ba40s74VdpsHZLh7f4K5uB8I67YF\n7gZOBoYAd4fzcouISBIk8s5iCJDt7ivcfS8wGbgkcgd3f8/dSydimAV0DpcvAKa6+1Z33wZMBUYk\nMFYREalGIpNFJyByurecsKwq1wFv1aSumY0xsywzy9q0adNBhisiIlWpEw3cZvZdIAN4sCb13H2i\nu2e4e0Z6enpighMRkYQmi1wgcsb2zmFZOWZ2PnAHMMrdC2pSV0REakcik8VsoKeZdTezRsBoIDNy\nBzMbCDxJkCg2Rmx6BxhuZm3Chu3hYZmIiCRBwob7cPciMxtL8Es+BZjk7ovMbAKQ5e6ZBI+dmgP/\nCsc++crdR7n7VjO7lyDhAExw962JilVERKqngQRFROqxejfqrJltAlYfxCHaA5vjFM6hor6dc307\nX9A51xcHc85Hu3vUHkKHTbI4WGaWFUt2PZzUt3Oub+cLOuf6ojbOuU50nRURkbpNyUJERKJSsthn\nYrIDSIL6ds717XxB51xfJPyc1WYhIiJR6c5CRESiqvfJItqcG4cSM+tiZu+Fc4QsMrMfh+VtzWxq\nODfI1NLh3i3wSHjuC8xsUMSxkjafSE2ZWYqZzTOzN8L17mb2SXhe/whHEMDM0sL17HB7t4hjjA/L\nl5nZBck5k9iYWWsze8nMlprZEjM7tR5c45+E/00vNLMXzazx4XadzWySmW00s4URZXG7rmY22Mw+\nD+s8YuGb0DFz93r7IXiz/EugB9AI+Azom+y4DuJ8OgKDwuUWwBcEc4k8AIwLy8cBvw+XRxKM9GvA\nKcAnYXlbYEX4b5twuU2yz6+a874NeAF4I1z/JzA6XH4CuDlc/iHwRLg8GvhHuNw3vPZpQPfwv4mU\nZJ9XNef7NHB9uNwIaH04X2OCEadXAk0iru+1h9t1BoYCg4CFEWVxu67Ap+G+Fta9sEbxJfsHlOSL\ncyrwTsT6eGB8suOK4/m9DgwDlgEdw7KOwLJw+Ungyoj9l4XbrwSejCgvt19d+hAMMjkdOBd4I/wf\nYTOQWvEaEww9c2q4nBruZxWve+R+de0DtAp/cVqF8sP5GpdOWdA2vG5vEMx5c9hdZ6BbhWQRl+sa\nblsaUV5uv1g+9f0xVE3n3DhkhLfeA4FPgCPcfV24aT1wRLhc1fkfSj+Xh4HbgZJwvR2w3d2LwvXI\n2MvOK9y+I9z/UDrf7sAm4G/ho7enzKwZh/E1dvdc4A/AV8A6gus2h8P7OpeK13XtFC5XLI9ZfU8W\nhyUzaw68DPw/d8+L3ObBnxWHRRc4M7sY2Ojuc5IdSy1KJXhU8bi7DwS+Jng8UeZwusYA4XP6SwgS\n5VFAM+rhzJnJvq71PVkcdvNmmFlDgkTxvLu/EhZvMLOO4faOQOlw8FWd/6HyczkdGGVmqwim7T0X\n+DPQ2sxKR1SOjL3svMLtrYAtHDrnC8FfhDnu/km4/hJB8jhcrzHA+cBKd9/k7oXAKwTX/nC+zqXi\ndV1z2TdtdWR5zOp7sog658ahJOzd8Fdgibs/FLEpEyjtFXENQVtGafn3wp4VpwA7wlveQ2I+EXcf\n7+6d3b0bwbV7192vBt4DLg93q3i+pT+Hy8P9PSwfHfai6Q70JGgMrHPcfT2wxsyOC4vOAxZzmF7j\n0FfAKWbWNPxvvPScD9vrHCEu1zXclmdmp4Q/w+9FHCs2yW7QSfaHoFfBFwQ9I+5IdjwHeS5nENym\nLgDmh5+RBM9rpwPLgWlA23B/Ax4Nz/1zICPiWD8AssPP95N9bjGc+9ns6w3Vg+CXQDbwLyAtLG8c\nrmeH23tE1L8j/Dkso4a9RJJwricCWeF1fo2g18thfY2BXwNLgYXAswQ9mg6r6wy8SNAmU0hwB3ld\nPK8rwdTVC8M6f6FCJ4loH73BLSIiUdX3x1AiIhIDJQsREYlKyUJERKJSshARkaiULEREJColC5GQ\nme0K/+1mZlfF+di/rLD+cTyPL5JoShYi++sG1ChZRLxJXJVyycLdT6thTCJJpWQhsr/7gTPNbH44\nj0KKmT1oZrPDuQNuBDCzs83sAzPLJHijGDN7zczmhHMvjAnL7geahMd7PiwrvYux8NgLw7kGrog4\n9vu2b96K50vnHzCz+y2Ys2SBmf2h1n86Ui9F+2tIpD4aB/zM3S8GCH/p73D3k8wsDfjIzP4T7jsI\nOMHdV4brP3D3rWbWBJhtZi+7+zgzG+vuJ1byXZcSvJE9AGgf1vlvuG0gcDywFvgION3MlgDfAnq7\nu5tZ67ifvUgldGchEt1wgnF45hMM+d6OYFwhgE8jEgXArWb2GTCLYEC3nlTvDOBFdy929w3ADOCk\niGPnuHsJwdAt3QiG284H/mpmlwK7D/rsRGKgZCESnQE/cvcTw093dy+9s/i6bCezswlGSD3V3QcA\n8wjGKTpQBRHLxQQT/RQBQwhGm70YePsgji8SMyULkf3tJJiWttQ7wM3h8O+YWa9wwqGKWgHb3H23\nmfUmmMKyVGFp/Qo+AK4I20XSCabWrHIk1HCuklbuPgX4CcHjK5GEU5uFyP4WAMXh46S/E8yR0Q2Y\nGzYybwK+WUm9t4GbwnaFZQSPokpNBBaY2VwPhlEv9SrBlKCfEYwYfLu7rw+TTWVaAK+bWWOCO57b\nDuwURWpGo86KiEhUegwlIiJRKVmIiEhUShYiIhKVkoWIiESlZCEiIlEpWYiISFRKFiIiEpWShYiI\nRPX/ARUKlgh5u9geAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1079e6ac8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "error_plt = ([],[])\n",
     "\n",
@@ -441,14 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total error: 341.999948387\nError Count: 342 of 418\n"
+      "Total error: 201.89609894\nError Count: 139 of 418\n"
      ]
     }
    ],
@@ -473,14 +491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction: 0 survivors out of 418\n"
+      "Prediction: 134 survivors out of 418\n"
      ]
     }
    ],
@@ -503,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -540,12 +558,12 @@
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>1100.500000</td>\n",
-       "      <td>0.301435</td>\n",
+       "      <td>0.320574</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>120.810458</td>\n",
-       "      <td>0.459431</td>\n",
+       "      <td>0.467257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -608,12 +626,12 @@
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>1100.500000</td>\n",
-       "      <td>0.301435</td>\n",
+       "      <td>0.320574</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>120.810458</td>\n",
-       "      <td>0.459431</td>\n",
+       "      <td>0.467257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -645,7 +663,7 @@
        "</div>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
